# sqlite3pp

./: CMakeLists.txt  LICENSE  README.md  sqlite3pp.h  sqlite3pp.pc.in  sqlite3pp.props  sqlite3pp.sln
boost_src/: sqlite3pp.cpp  sqlite3pp.h  sqlite3ppext.cpp  sqlite3ppext.h
debian/: changelog  control  copyright  libsqlcipherpp-dev.install.in  libsqlcipherpp.postinst  libsqlcipherpp1.install.in  libsqlite3pp-dev.install.in  libsqlite3pp.postinst  libsqlite3pp1.install.in  rules
headeronly_src/: sqlite3pp.h  sqlite3pp.ipp  sqlite3ppext.h  sqlite3ppext.ipp  test_all.cpp
noboost_src/: sqlite3pp.cpp  sqlite3pp.h  sqlite3ppext.cpp  sqlite3ppext.h
src/: CMakeLists.txt  queryresult.cpp  queryresult.hpp  queryrow.cpp  queryrow.hpp  sqlite3pp.cpp  sqlite3pp.h  sqlite3pp.vcxproj  sqlite3pp.vcxproj.filters  sqlite3pp_export.h  sqlite3ppext.cpp  sqlite3ppext.h  testinsert.cpp  testselect.cpp  trim_strlen.cpp  trim_strlen.h
test/: testaggregate.cpp  testaggregate.vcxproj  testaggregate.vcxproj.filters  testattach.cpp  testattach.vcxproj  testattach.vcxproj.filters  testbackup.cpp  testcallback.cpp  testcallback.vcxproj  testcallback.vcxproj.filters  testdb.cpp  testdisconnect.cpp  testdisconnect.vcxproj  testdisconnect.vcxproj.filters  testfunction.cpp  testfunction.vcxproj  testfunction.vcxproj.filters  testinsert.cpp  testinsert.vcxproj  testinsert.vcxproj.filters  testinsertall.cpp  testinsertall.vcxproj  testinsertall.vcxproj.filters  testselect.cpp  testselect.vcxproj  testselect.vcxproj.filters
tests/: CMakeLists.txt  testaggregate.cpp  testattach.cpp  testdisconnect.cpp  testinsertall.cpp  testinsertwithkey.cpp
