# vim: set ts=4 sw=4 sts=4 et:

SET (SQLITE3PP_SRCS
	 sqlite3pp.cpp
	 sqlite3ppext.cpp
)

ADD_DEFINITIONS (-DSQLITE3PP_BUILDING_DLL)
ADD_LIBRARY (${SQLITE3PP_NAME} SHARED ${SQLITE3PP_SRCS})
TARGET_LINK_LIBRARIES (${SQLITE3PP_NAME} ${SQLITE3})

IF (ENABLE_SO_VERSION)
    SET_TARGET_PROPERTIES (${SQLITE3PP_NAME} PROPERTIES
                           SOVERSION ${SQLITE3PP_MAJOR}
                           VERSION ${SQLITE3PP_MAJOR}.${SQLITE3PP_MINOR}.${SQLITE3PP_MICRO})
ENDIF (ENABLE_SO_VERSION)

# at build time you may specify the cmake variable LIB_SUFFIX to handle
# 64-bit systems which use 'lib64'
INSTALL (TARGETS ${SQLITE3PP_NAME}
		 RUNTIME DESTINATION bin
         LIBRARY DESTINATION ${INSTALL_LIBDIR}
         ARCHIVE DESTINATION ${INSTALL_LIBDIR})

INSTALL (FILES sqlite3ppext.h sqlite3pp.h sqlite3pp_export.h
         DESTINATION include/${SQLITE3PP_NAME})
